Fix module-path support in Gradle Plugin
Work-in-progress!